--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,5 @@ services:
         build: .
         command: tail -f /dev/null
         volumes:
-            - ./large_dicom_dir.zip:/srv/test/large_dicom_dir.zip
-            - ./benchmark.sh:/srv/test
+            - ./large_dicom_dir.tar.gz:/srv/test/large_dicom_dir.tar.gz
+            - ./benchmark.sh:/srv/test/benchmark.sh
